# aoc2023

01/lib/: Aoc.ml
01/test/: dune  test_aoc.ml
02/lib/: Aoc.ml  dune
02/test/: test_aoc.ml
03/lib/: Aoc.ml  dune
03/test/: dune  test_aoc.ml
04/lib/: Aoc.ml
04/test/: test_aoc.ml
05/lib/: Aoc.ml
05/test/: test_aoc.ml
06/: nv.sh
06/lib/: Aoc.ml
06/test/: test_aoc.ml
07/lib/: Aoc.ml
07/test/: test_aoc.ml
08/: dune-project
08/lib/: Aoc.ml  dune
08/test/: test_aoc.ml
09/: aoc.opam
09/lib/: Aoc.ml  dune
09/test/: test_aoc.ml
template/lib/: Aoc.ml
template/test/: test_aoc.ml
